# SystemicRisk

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  PULL_REQUEST_TEMPLATE.md  README.md  analyze.m  calculate_adjacency_matrix.m  calculate_covar.m  dataset.xlsx  get_rolling_windows.m  initialize.m  main_net.m  main_pro.m  parse_dataset.m  quantile_regression.m  run.m  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
Datasets/: Dataset.xlsx  Example.xlsx  Example_2.mat  Example_2.xlsx  Example_Large.mat  Example_Large.xlsx  Example_Small1.xlsx  Example_Small2.xlsx  Example_Small_1.mat  Example_Small_1.xlsx  Example_Small_2.mat  Example_Small_2.xlsx  Example_Small_3.mat  Example_Small_3.xlsx
ScriptsCommon/: figure_title.m  parse_dataset.m
ScriptsComponent/: run_component.m
ScriptsConnectedness/: causal_adjacency.m  run_connectedness.m
ScriptsCrossSectional/: dcc_gjrgarch.m  run_cross_sectional.asv  run_cross_sectional.m
ScriptsData/: distress_data.m  extract_firms_data.m  extract_rolling_windows.m  forward_roll_data.m  sanitize_data.m  smooth_data.m
ScriptsDataset/: analyze_dataset.m  parse_dataset.m  validate_dataset.m  validate_xls.m  worksheets_batch.m
ScriptsMeasures/: extract_rolling_windows.m  run_bubbles_detection.m  run_comparison.m  run_component.m  run_connectedness.m  run_cross_entropy.m  run_cross_quantilogram.m  run_cross_sectional.m  run_default.m  run_liquidity.m  run_regime_switching.m  run_spillover.m  run_tail_dependence.m  variance_decomposition.m
ScriptsModels/: asymptotic_tail_dependence.m  bivariate_caviar.m  catfin.m  causal_adjacency.m  chi_metrics.m  cimdo.m  component_metrics.m  connectedness_indicators.m  connectedness_metrics.m  contingent_claims_analysis.m  cross_entropy_metrics.m  cross_quantilograms_sb.m  cross_quantilograms_sn.m  cross_sectional_metrics.m  dcc_gjrgarch.m  default_metrics.m  distress_insurance_premium.m  granger_causality.m  granger_causality_test.m  illiq_indicator.m  kendall_rankings.m  kmv_structural.m  lasso_quantile_regression.m  liquidity_metrics.m  mgev_joint_risk_metrics.m  mgev_joint_risks.m  (+12 more)
(+122 files in other folders)
