[metadata]
name = PyDTMC
author = Tommaso Belluzzo
author_email = tommaso.belluzzo@gmail.com
maintainer = Tommaso Belluzzo
maintainer_email = tommaso.belluzzo@gmail.com
description = A framework for discrete-time Markov chains analysis.
description_file = README.md
url = https://github.com/TommasoBelluzzo/PyDTMC
project_urls =
    Bug Tracker = https://github.com/TommasoBelluzzo/PyDTMC/issues
license = MIT
license_files = LICENSE.md
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Education
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development :: Libraries
keywords = analysis chain fitting markov models plotting probability process random simulation stochastic

[options]
python_requires = >=3.6
setup_requires = setuptools
install_requires =
    matplotlib
    networkx
    numpy
    scipy

[options.extras_require]
all =
    sphinx
    sphinx-autodoc-typehints
test =
    coverage
    pytest
    pytest-cov

[bdist_wheel]
universal = 0

[coverage:run]
omit =
    setup.py
    pydtmc/__init__.py
    pydtmc/base_class.py
    pydtmc/custom_types.py
    pydtmc/decorators.py
    pydtmc/exceptions.py
    pydtmc/utilities.py
    tests/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __eq__
    def __hash__
    def __repr__
    def __str__
    if self\.debug
